# ashborn-agent

./: .ashborn_tasks.json  .gitignore  README.md  __init__.py  add_orange_red.py  agent.py  app.py  ashborn.context.json  ashborn.generation.json  ashborn.plan.json  ashborn.trace.jsonl  calc.py  execution_state.json  factorial.py  gengle.py  git_auto_sync.py  install_extension.sh  launch.py  launch_ashborn.sh  main.py  patch_select.py  phoneix-updates-notes.md  pyproject.toml  replace_colors.py  replace_colors_splash.py  requirements.txt  run.bat  run.sh  smart_git.py  start_server.sh  start_sync.bat  test_agent.py  test_calc.py  test_completion.py  test_math_utils.py  upgrad_ash_ide.txt  validate_math_utils_init.py
ashborn/: __init__.py  agent.py  cognition.py  cognition_old.py  main.py  phoneix-updates-notes.md  server.py
ashborn-lab/: test_agent.py
ashborn_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
build_temp/: install.sh
cli/: __init__.py  chat_screen.py  splash_screen.py  theme.py
fastapi_web_app/: main.py
gengle/: main.py
install_test/: install.sh
liberay-app/: simple2.txt
math_utils/: __init__.py  calc.py  factorial.py  test_calc.py
modern_marriage_guide/: main.py
scratch/: _test_edit_target.py  list_tools.py  test_ash.py  test_ash_unit.py  test_ashborn_imports.py  test_completion.py  test_file_tools.py  test_imports.py  test_select.py  test_shadow.py  test_textarea.py  test_tool.py
scratch_test/: calc.py  main.py
scripts/: install.sh  make_round.py  package.sh  patch_wizard.py  verify_install.sh
(+70 files in other folders)
